--- a/RemotePanorama/Properties/Resources.resx
+++ b/RemotePanorama/Properties/Resources.resx
@@ -136,4 +136,13 @@
   <data name="Icojam-Blueberry-Basic-Arrow-right" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icojam-Blueberry-Basic-Arrow-right.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RemoteFileDialog_GetLatestVersion_Proteins___0___Peptides___1___Precursors___2___Transitions___3___Replicates___4_" xml:space="preserve">
+	  <value>Proteins: {0}, Peptides: {1}, Precursors: {2}, Transitions: {3}, Replicates: {4}</value>
+  </data>
+  <data name="RemoteFileDialog_AddQueryFiles_Proteins___0___Peptides___1___Precursors___2___Transitions___3___Replicates___4_" xml:space="preserve">
+	  <value>Proteins: {0}, Peptides: {1}, Precursors: {2}, Transitions: {3}, Replicates: {4}</value>
+  </data>
+  <data name="RemoteFileDialog_RemoteFileDialog_Load_Open" xml:space="preserve">
+	  <value>Open</value>
+  </data>
 </root>
